<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.xbj.common.views.listItem.SpearManagerItemViewViewModel" />
        <variable
            name="spearManagerView"
            type="com.xbj.common.views.listItem.SpearManagerItemView" />
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
        <import type="androidx.databinding.ObservableField" />
    </data>
    <RelativeLayout
        android:background="@color/white"
        android:onClick="@{spearManagerView::onClick}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_alignParentLeft="true"
            android:id="@+id/label_layout"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:width="@dimen/dp_80"
                android:background="@drawable/spear_manager_item_shape"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@{viewModel.platName}"
                android:layout_height="@dimen/dp_30">
            </TextView>
        <!--    <TextView
                android:layout_width="wrap_content"
                android:text="@{viewModel.expressName}"
                android:width="@dimen/dp_80"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_height="@dimen/dp_0">
            </TextView>-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="@dimen/dp_34"
                    android:layout_height="@dimen/dp_34"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:src="@{viewModel.drawable}" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_32"
            android:paddingBottom="@dimen/dp_8"
            android:layout_toRightOf="@id/label_layout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_account"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"

                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.gunCode}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_spear_pwd"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.gunPass}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_emp_name"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.expressEmpName}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_emp_code"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.expressEmpCode}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_phone"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.expressEmpPhone}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:visibility="@{viewModel.showPhonePwdFlag ? View.VISIBLE:View.GONE}"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_phone_pwd"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.expressEmpPhonePass}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_three_code"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.thirdNumber}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:visibility="@{viewModel.showDeviveCodeFlag ? View.VISIBLE:View.GONE}"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/spear_manager_device_code"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.ttDevSn}"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>


            <!--    <TextView
                    android:textSize="@dimen/sp_14"
                    android:layout_marginTop="@dimen/dp_6"
                    android:textColor="@color/color_303133"
                    android:layout_width="wrap_content"
                    android:text="@{viewModel.expressEmpName}"
                    android:layout_height="wrap_content">
                </TextView>-->

            <!-- <TextView
                 android:textSize="@dimen/sp_14"
                 android:layout_marginTop="@dimen/dp_6"
                 android:textColor="@color/color_303133"
                 android:layout_width="wrap_content"
                 android:text="@{viewModel.expressEmpPhonePass}"
                 android:layout_height="wrap_content">
             </TextView>-->

        </LinearLayout>
        <View
            android:id="@+id/diliver"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_m_16"
            android:layout_marginRight="@dimen/dp_m_16"
            android:layout_alignParentBottom="true"
            style="@style/ViewLineHorizontalOnePx"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_16"
            android:layout_centerInParent="true"
            android:id="@+id/setting_scan_config"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_gravity="center"
            android:background="@drawable/arrow_right"
            android:button="@null"
            />
    </RelativeLayout>
</layout>